--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    font-family: "Poppins", sans-serif;
+  }
+}
+
+span {
+  font-family: "Dancing Script", cursive;
+}
